// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<div
  style={
    Object {
      "margin": 35,
    }
  }
>
  <div
    id="story-root"
    style={Object {}}
  >
    <button
      className="ui button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Default
    </button>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Story Source
      </h1>
      <div
        className="css-1fhpnuv"
      >
        <div
          className="css-1si67pu"
          data-simplebar={true}
        >
          <div
            className="simplebar-wrapper"
          >
            <div
              className="simplebar-height-auto-observer-wrapper"
            >
              <div
                className="simplebar-height-auto-observer"
              />
            </div>
            <div
              className="simplebar-mask"
            >
              <div
                className="simplebar-offset"
              >
                <div
                  className="simplebar-content-wrapper"
                  tabIndex={0}
                >
                  <div
                    className="simplebar-content"
                  >
                    <pre
                      className="hljs css-4zr3vl"
                    >
                      <code
                        className="css-1maezg8"
                      >
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              className="token class-name"
                            >
                              Button
                            </span>
                          </span>
                           
                          <span
                            className="token attr-name"
                          >
                            onClick
                          </span>
                          <span
                            className="token script language-javascript"
                          >
                            <span
                              className="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              {
                            </span>
                            <span
                              className="token keyword"
                            >
                              function
                            </span>
                             
                            <span
                              className="token function"
                            >
                              noRefCheck
                            </span>
                            <span
                              className="token punctuation"
                            >
                              (
                            </span>
                            <span
                              className="token punctuation"
                            >
                              )
                            </span>
                             
                            <span
                              className="token punctuation"
                            >
                              {
                            </span>
                            <span
                              className="token punctuation"
                            >
                              }
                            </span>
                            <span
                              className="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          <span
                            className="token punctuation"
                          >
                            &gt;
                          </span>
                        </span>
                        <span
                          className="token plain-text"
                        >
                          
  Default

                        </span>
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;/
                            </span>
                            <span
                              className="token class-name"
                            >
                              Button
                            </span>
                          </span>
                          <span
                            className="token punctuation"
                          >
                            &gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="simplebar-placeholder"
            />
          </div>
          <div
            className="simplebar-track simplebar-horizontal"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
          <div
            className="simplebar-track simplebar-vertical"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          className="css-11xgcgt"
        >
          <button
            className="css-1imo1gr"
            onClick={[Function]}
          >
            Copy
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Disabled 1`] = `
<div
  style={
    Object {
      "margin": 35,
    }
  }
>
  <div
    id="story-root"
    style={Object {}}
  >
    <button
      className="ui button disabled"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Disabled
    </button>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Story Source
      </h1>
      <div
        className="css-1fhpnuv"
      >
        <div
          className="css-1si67pu"
          data-simplebar={true}
        >
          <div
            className="simplebar-wrapper"
          >
            <div
              className="simplebar-height-auto-observer-wrapper"
            >
              <div
                className="simplebar-height-auto-observer"
              />
            </div>
            <div
              className="simplebar-mask"
            >
              <div
                className="simplebar-offset"
              >
                <div
                  className="simplebar-content-wrapper"
                  tabIndex={0}
                >
                  <div
                    className="simplebar-content"
                  >
                    <pre
                      className="hljs css-4zr3vl"
                    >
                      <code
                        className="css-1maezg8"
                      >
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              className="token class-name"
                            >
                              Button
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            disabled
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            onClick
                          </span>
                          <span
                            className="token script language-javascript"
                          >
                            <span
                              className="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              {
                            </span>
                            <span
                              className="token keyword"
                            >
                              function
                            </span>
                             
                            <span
                              className="token function"
                            >
                              noRefCheck
                            </span>
                            <span
                              className="token punctuation"
                            >
                              (
                            </span>
                            <span
                              className="token punctuation"
                            >
                              )
                            </span>
                             
                            <span
                              className="token punctuation"
                            >
                              {
                            </span>
                            <span
                              className="token punctuation"
                            >
                              }
                            </span>
                            <span
                              className="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          

                          <span
                            className="token punctuation"
                          >
                            &gt;
                          </span>
                        </span>
                        <span
                          className="token plain-text"
                        >
                          
  Disabled

                        </span>
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;/
                            </span>
                            <span
                              className="token class-name"
                            >
                              Button
                            </span>
                          </span>
                          <span
                            className="token punctuation"
                          >
                            &gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="simplebar-placeholder"
            />
          </div>
          <div
            className="simplebar-track simplebar-horizontal"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
          <div
            className="simplebar-track simplebar-vertical"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          className="css-11xgcgt"
        >
          <button
            className="css-1imo1gr"
            onClick={[Function]}
          >
            Copy
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Google 1`] = `
<div
  style={
    Object {
      "margin": 35,
    }
  }
>
  <div
    id="story-root"
    style={Object {}}
  >
    <button
      className="ui button google plus"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <i
        className="google icon"
      />
      Google
    </button>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Story Source
      </h1>
      <div
        className="css-1fhpnuv"
      >
        <div
          className="css-1si67pu"
          data-simplebar={true}
        >
          <div
            className="simplebar-wrapper"
          >
            <div
              className="simplebar-height-auto-observer-wrapper"
            >
              <div
                className="simplebar-height-auto-observer"
              />
            </div>
            <div
              className="simplebar-mask"
            >
              <div
                className="simplebar-offset"
              >
                <div
                  className="simplebar-content-wrapper"
                  tabIndex={0}
                >
                  <div
                    className="simplebar-content"
                  >
                    <pre
                      className="hljs css-4zr3vl"
                    >
                      <code
                        className="css-1maezg8"
                      >
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              className="token class-name"
                            >
                              Button
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            classes
                          </span>
                          <span
                            className="token script language-javascript"
                          >
                            <span
                              className="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              {
                            </span>
                            <span
                              className="token punctuation"
                            >
                              [
                            </span>
                            
    
                            <span
                              className="token string"
                            >
                              'google'
                            </span>
                            <span
                              className="token punctuation"
                            >
                              ,
                            </span>
                            
    
                            <span
                              className="token string"
                            >
                              'plus'
                            </span>
                            
  
                            <span
                              className="token punctuation"
                            >
                              ]
                            </span>
                            <span
                              className="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            onClick
                          </span>
                          <span
                            className="token script language-javascript"
                          >
                            <span
                              className="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              {
                            </span>
                            <span
                              className="token keyword"
                            >
                              function
                            </span>
                             
                            <span
                              className="token function"
                            >
                              noRefCheck
                            </span>
                            <span
                              className="token punctuation"
                            >
                              (
                            </span>
                            <span
                              className="token punctuation"
                            >
                              )
                            </span>
                             
                            <span
                              className="token punctuation"
                            >
                              {
                            </span>
                            <span
                              className="token punctuation"
                            >
                              }
                            </span>
                            <span
                              className="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          

                          <span
                            className="token punctuation"
                          >
                            &gt;
                          </span>
                        </span>
                        <span
                          className="token plain-text"
                        >
                          
  
                        </span>
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;
                            </span>
                            i
                          </span>
                           
                          <span
                            className="token attr-name"
                          >
                            className
                          </span>
                          <span
                            className="token attr-value"
                          >
                            <span
                              className="token punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                            google icon
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                          </span>
                           
                          <span
                            className="token punctuation"
                          >
                            /&gt;
                          </span>
                        </span>
                        <span
                          className="token plain-text"
                        >
                          
  Google

                        </span>
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;/
                            </span>
                            <span
                              className="token class-name"
                            >
                              Button
                            </span>
                          </span>
                          <span
                            className="token punctuation"
                          >
                            &gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="simplebar-placeholder"
            />
          </div>
          <div
            className="simplebar-track simplebar-horizontal"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
          <div
            className="simplebar-track simplebar-vertical"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          className="css-11xgcgt"
        >
          <button
            className="css-1imo1gr"
            onClick={[Function]}
          >
            Copy
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Primary 1`] = `
<div
  style={
    Object {
      "margin": 35,
    }
  }
>
  <div
    id="story-root"
    style={Object {}}
  >
    <button
      className="ui button primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Primary
    </button>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Story Source
      </h1>
      <div
        className="css-1fhpnuv"
      >
        <div
          className="css-1si67pu"
          data-simplebar={true}
        >
          <div
            className="simplebar-wrapper"
          >
            <div
              className="simplebar-height-auto-observer-wrapper"
            >
              <div
                className="simplebar-height-auto-observer"
              />
            </div>
            <div
              className="simplebar-mask"
            >
              <div
                className="simplebar-offset"
              >
                <div
                  className="simplebar-content-wrapper"
                  tabIndex={0}
                >
                  <div
                    className="simplebar-content"
                  >
                    <pre
                      className="hljs css-4zr3vl"
                    >
                      <code
                        className="css-1maezg8"
                      >
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              className="token class-name"
                            >
                              Button
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            onClick
                          </span>
                          <span
                            className="token script language-javascript"
                          >
                            <span
                              className="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              {
                            </span>
                            <span
                              className="token keyword"
                            >
                              function
                            </span>
                             
                            <span
                              className="token function"
                            >
                              noRefCheck
                            </span>
                            <span
                              className="token punctuation"
                            >
                              (
                            </span>
                            <span
                              className="token punctuation"
                            >
                              )
                            </span>
                             
                            <span
                              className="token punctuation"
                            >
                              {
                            </span>
                            <span
                              className="token punctuation"
                            >
                              }
                            </span>
                            <span
                              className="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            primary
                          </span>
                          

                          <span
                            className="token punctuation"
                          >
                            &gt;
                          </span>
                        </span>
                        <span
                          className="token plain-text"
                        >
                          
  Primary

                        </span>
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;/
                            </span>
                            <span
                              className="token class-name"
                            >
                              Button
                            </span>
                          </span>
                          <span
                            className="token punctuation"
                          >
                            &gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="simplebar-placeholder"
            />
          </div>
          <div
            className="simplebar-track simplebar-horizontal"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
          <div
            className="simplebar-track simplebar-vertical"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          className="css-11xgcgt"
        >
          <button
            className="css-1imo1gr"
            onClick={[Function]}
          >
            Copy
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Primary Disabled 1`] = `
<div
  style={
    Object {
      "margin": 35,
    }
  }
>
  <div
    id="story-root"
    style={Object {}}
  >
    <button
      className="ui button primary disabled"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Primary Disabled
    </button>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Story Source
      </h1>
      <div
        className="css-1fhpnuv"
      >
        <div
          className="css-1si67pu"
          data-simplebar={true}
        >
          <div
            className="simplebar-wrapper"
          >
            <div
              className="simplebar-height-auto-observer-wrapper"
            >
              <div
                className="simplebar-height-auto-observer"
              />
            </div>
            <div
              className="simplebar-mask"
            >
              <div
                className="simplebar-offset"
              >
                <div
                  className="simplebar-content-wrapper"
                  tabIndex={0}
                >
                  <div
                    className="simplebar-content"
                  >
                    <pre
                      className="hljs css-4zr3vl"
                    >
                      <code
                        className="css-1maezg8"
                      >
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              className="token class-name"
                            >
                              Button
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            disabled
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            onClick
                          </span>
                          <span
                            className="token script language-javascript"
                          >
                            <span
                              className="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              {
                            </span>
                            <span
                              className="token keyword"
                            >
                              function
                            </span>
                             
                            <span
                              className="token function"
                            >
                              noRefCheck
                            </span>
                            <span
                              className="token punctuation"
                            >
                              (
                            </span>
                            <span
                              className="token punctuation"
                            >
                              )
                            </span>
                             
                            <span
                              className="token punctuation"
                            >
                              {
                            </span>
                            <span
                              className="token punctuation"
                            >
                              }
                            </span>
                            <span
                              className="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            primary
                          </span>
                          

                          <span
                            className="token punctuation"
                          >
                            &gt;
                          </span>
                        </span>
                        <span
                          className="token plain-text"
                        >
                          
  Primary Disabled

                        </span>
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;/
                            </span>
                            <span
                              className="token class-name"
                            >
                              Button
                            </span>
                          </span>
                          <span
                            className="token punctuation"
                          >
                            &gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="simplebar-placeholder"
            />
          </div>
          <div
            className="simplebar-track simplebar-horizontal"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
          <div
            className="simplebar-track simplebar-vertical"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          className="css-11xgcgt"
        >
          <button
            className="css-1imo1gr"
            onClick={[Function]}
          >
            Copy
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Submit 1`] = `
<div
  style={
    Object {
      "margin": 35,
    }
  }
>
  <div
    id="story-root"
    style={Object {}}
  >
    <button
      className="ui button"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Story Source
      </h1>
      <div
        className="css-1fhpnuv"
      >
        <div
          className="css-1si67pu"
          data-simplebar={true}
        >
          <div
            className="simplebar-wrapper"
          >
            <div
              className="simplebar-height-auto-observer-wrapper"
            >
              <div
                className="simplebar-height-auto-observer"
              />
            </div>
            <div
              className="simplebar-mask"
            >
              <div
                className="simplebar-offset"
              >
                <div
                  className="simplebar-content-wrapper"
                  tabIndex={0}
                >
                  <div
                    className="simplebar-content"
                  >
                    <pre
                      className="hljs css-4zr3vl"
                    >
                      <code
                        className="css-1maezg8"
                      >
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              className="token class-name"
                            >
                              Button
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            onClick
                          </span>
                          <span
                            className="token script language-javascript"
                          >
                            <span
                              className="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              {
                            </span>
                            <span
                              className="token keyword"
                            >
                              function
                            </span>
                             
                            <span
                              className="token function"
                            >
                              noRefCheck
                            </span>
                            <span
                              className="token punctuation"
                            >
                              (
                            </span>
                            <span
                              className="token punctuation"
                            >
                              )
                            </span>
                             
                            <span
                              className="token punctuation"
                            >
                              {
                            </span>
                            <span
                              className="token punctuation"
                            >
                              }
                            </span>
                            <span
                              className="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            type
                          </span>
                          <span
                            className="token attr-value"
                          >
                            <span
                              className="token punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                            submit
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          

                          <span
                            className="token punctuation"
                          >
                            &gt;
                          </span>
                        </span>
                        <span
                          className="token plain-text"
                        >
                          
  Submit

                        </span>
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;/
                            </span>
                            <span
                              className="token class-name"
                            >
                              Button
                            </span>
                          </span>
                          <span
                            className="token punctuation"
                          >
                            &gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="simplebar-placeholder"
            />
          </div>
          <div
            className="simplebar-track simplebar-horizontal"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
          <div
            className="simplebar-track simplebar-vertical"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          className="css-11xgcgt"
        >
          <button
            className="css-1imo1gr"
            onClick={[Function]}
          >
            Copy
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
